fixed dropdown resize issue, and added proper overlapping

--- a/less/global.less
+++ b/less/global.less
@@ -32,9 +32,6 @@ h2, h3, h4, h5 {
 .hide {
   display: none;
 }
-.nav-items-faded-text{
-  color: #A2ACB5;
-}
 
 .general-button {
   display:flex;
@@ -47,6 +44,7 @@ h2, h3, h4, h5 {
   font-size: 16px;
   width:136px;
   height:47px;
+  padding-bottom: 3px;
 }
 
 .recent-project-img-titles {
