--- a/less/home-page.less
+++ b/less/home-page.less
@@ -11,6 +11,7 @@
     position: absolute;
     bottom: 49px;
     left: 83px;
+    z-index: 1;
   }
 }
 
@@ -19,12 +20,14 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    position: relative;
     width: 100%;
     height: 550px;
     background-image: linear-gradient(
       rgba(152,164,174, 0.9), 
       rgba(152,164,174, 0.9)
     );
+    z-index: 2;
     
     .nav-bar-items-center {
       display: flex;
